# Functional-Programming

./: .gitignore  README.md
CSU34016-1920/Exercise00/src/: Ex00.hs
CSU34016-1920/Exercise01/src/: Ex01.hs
CSU34016-1920/Exercise02/src/: Ex02.hs
CSU34016-1920/Exercise03/: Exercise03.md
CSU34016-1920/Exercise03/data/: Ex03.thr
CSU34016-1920/Exercise03/src/: Ex03.hs
Introduction-To-Functional/assignments/Exercise01/: Exercise01.md
Introduction-To-Functional/exam-preparation/2019/: question1.hs  question2.hs
Topics-In-Functional/Assignments/Assignment1/: README.md  assignment1.cabal  assignmentspec.md  package.yaml  stack.yaml
Topics-In-Functional/Assignments/Assignment2/: README.md  assignment2.cabal  assignmentspec.md  package.yaml  stack.yaml
Topics-In-Functional/Weekly-Exercises/Week1/: ChangeLog.md  Week1.cabal  fib.cabal  package.yaml  stack.yaml  week1.cabal
Topics-In-Functional/Weekly-Exercises/Week10/: package.yaml  week10.cabal
Topics-In-Functional/Weekly-Exercises/Week11/: package.yaml  week11.cabal
Topics-In-Functional/Weekly-Exercises/Week2/: fib.cabal  package.yaml  week2.cabal
Topics-In-Functional/Weekly-Exercises/Week5/: week5.cabal
Topics-In-Functional/Weekly-Exercises/Week5/ShapeExample2/: ShapeExample2.cabal
Topics-In-Functional/Weekly-Exercises/Week5/ShapeExample2/src/: Main.hs  Mandelbrot.hs
Topics-In-Functional/Weekly-Exercises/Week5/src/: Render.hs  Shapes.hs
assignments/Exercise03/: ex03.cabal
exam-preparation/2015/: question1.hs  question2.hs  question3.hs
exam-preparation/2019/: question2.hs  question3.hs
(+40 files in other folders)
