name:                week5
version:             0.1.0.0
synopsis:            
description:         
homepage:            
license:             BSD3
license-file:        LICENSE
author:              
maintainer:          
copyright:           
category:            
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable week5
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Render, Shapes
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,JuicyPixels
